完成自动补全功能以及部分参数信息入库